fixed the bug with text being behind the images. corrected it by applying an z-index css attribute to the text boxes which allow them to always be ontop. all that remains is styling of the text

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -34,6 +34,7 @@ a p {
   font-size: 0.8rem;
   color: #99d98c;
   text-decoration: underline;
+  z-index: 1000;
 }
 .btn {
   margin-top: 2rem;
@@ -94,6 +95,7 @@ a p {
   position: absolute;
   top: 20%;
   font-style: italic;
+  z-index: 1000;
 }
 .carouselWrapper {
   position: relative;
